part2/2.06/kube/manifests/log-output-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercise
  name: log-output-svc
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
