part2/2.06/kube/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: exercise
  name: strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /pingpong
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: exercise
  name: ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: exercise-strip-prefix@kubernetescrd

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: log-output-svc
                port:
                  number: 2345
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong-svc
                port:
                  number: 2346
